FIX: Stretchy avatars on iOS 15.0

--- a/assets/stylesheets/common/common.scss
+++ b/assets/stylesheets/common/common.scss
@@ -419,6 +419,7 @@ $float-height: 530px;
     }
 
     .tc-avatar-container {
+      align-items: flex-start;
       display: flex;
       cursor: pointer;
       justify-content: center;
